:bug: Fixed map not showing on back

--- a/src/app/credit-rating/municipal-laws/municipal-laws.component.scss
+++ b/src/app/credit-rating/municipal-laws/municipal-laws.component.scss
@@ -125,3 +125,11 @@ table {
     outline: none !important;
   }
 }
+
+:host {
+  .hide-container {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+  }
+}
